till menu icons

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,86 @@
+*{
+    box-sizing: border-box;
+}
+
+:root{
+    --primary-color: #2a8947;
+}
+
+body{
+    margin: 0;
+    overflow: hidden;
+    font-size: 16px;
+}
+
 .container{
     height: 100vh;
 }
 
+.title-bar{
+    height: 5vh;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.menu-bar{
+    height: 5vh;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: row;
+}
+
+.menu-item{
+    padding: 0rem 1rem;
+    color: #fff;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-item.active{
+    background-color: #fff;
+    color: var(--primary-color);
+}
+
+.menu-item:hover{
+    background-color: #1f6935;
+    cursor: pointer;
+}
+
+.menu-item.active:hover{
+    background-color: #fff;
+    cursor: default;
+}
+
+.menu-icon-bar{
+    height: 6vh;
+    background-color: rgb(230, 230, 230);
+    display: flex;
+}
+
+.menu-icons{
+    padding: 0rem 0.70rem;
+    display: flex;
+    align-items: center;
+}
+
+.menu-icons:hover{
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.formula-bar{
+    height: 6vh;
+}
+
+.data-container{
+    height: 74vh;
+}
+
+.sheet-bar{
+    height: 4vh;
+}
