--- a/styles.css
+++ b/styles.css
@@ -98,5 +98,56 @@ body{
 }
 
 .sheet-bar{
+    border-top: 2px solid lightgray;
     height: 4vh;
+    display: flex;
+    align-items: center;
+}
+.scroller{
+    width: 80px;
+}
+
+.nav-icons{
+    font-size: 35px;
+}
+
+.nav-icons:hover{
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.icon-add{
+    color: var(--primary-color);
+    padding: 0rem 0.5rem;
+    margin: 0rem 0.70rem;
+    width: 30px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-add:hover{
+background-color: lightgray;
+cursor: pointer;
+transform: scale(1.2);
+}
+
+.sheet-tab{
+    border-bottom: 4px solid var(--primary-color);
+    padding: 0.1rem 0.70rem;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.sheet-tab:hover{
+    cursor: default;
+}
+
+.sheet-tab-container{
+    border: 1px solid lightgray;
+    margin: 0rem 0.70rem;
 }
